--- a/app/frontend/pages/Admin/People/Person/Person.css
+++ b/app/frontend/pages/Admin/People/Person/Person.css
@@ -1,12 +1,48 @@
 .person-form {
-  display: grid;
-  grid-template-columns: 1fr 3fr;
-  gap: var(--large);
-  align-items: flex-start;
   padding-block: var(--large);
 
-  label {
-    padding: var(--small) 0;
+  section {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: var(--large);
+    align-items: flex-start;
+    padding: var(--large) 0;
+
+    > * {
+      grid-column: 2;
+    }
+
+    header {
+      grid-column: 1;
+
+      h3 {
+        margin: 0;
+      }
+
+      p {
+        margin: 0;
+        color: var(--text-subtle);
+      }
+    }
+
+    &:not(:first-child) {
+      border-top: var(--border-width-standard) solid var(--border-subtle);
+    }
+  }
+
+  .labelled {
+    display: flex;
+    flex-direction: column;
+    gap: var(--small);
+    align-items: stretch;
+
+    p {
+      margin: 0;
+    }
+
+    &__hint {
+      color: var(--text-subtle);
+    }
   }
 
   .select,
