--- a/app/frontend/pages/Admin/Admin.css
+++ b/app/frontend/pages/Admin/Admin.css
@@ -39,3 +39,92 @@
     }
   }
 }
+
+.details-form {
+  padding-block: var(--large);
+  transition: opacity var(--timing-standard) var(--ease-standard);
+
+  &[aria-busy] {
+    opacity: var(--disabled-opacity);
+    pointer-events: none;
+  }
+
+  section {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: var(--large);
+    align-items: flex-start;
+    padding: var(--large) 0;
+
+    > * {
+      grid-column: 2;
+    }
+
+    header {
+      grid-column: 1;
+
+      h3 {
+        margin: 0;
+      }
+
+      p {
+        margin: 0;
+        color: var(--text-subtle);
+      }
+    }
+
+    &:not(:first-child, .details-form__buttons) {
+      border-top: var(--border-width-standard) solid var(--border-subtle);
+    }
+  }
+
+  .labelled {
+    flex-direction: column;
+    gap: var(--small);
+    align-items: stretch;
+    align-self: stretch;
+
+    p {
+      margin: 0;
+    }
+
+    &__hint {
+      color: var(--text-subtle);
+    }
+
+    &__field {
+      display: flex;
+      flex-direction: column;
+      align-items: stretch;
+      align-self: stretch;
+    }
+  }
+
+  .select,
+  input.input {
+    max-width: 24rem;
+  }
+
+  textarea {
+    min-height: 10rem;
+    max-height: 50vh;
+  }
+
+  .profile-picture {
+    grid-column: 2;
+  }
+
+  .permission {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    gap: var(--small);
+
+    &__label {
+      display: contents;
+    }
+
+    &__children {
+      grid-column: 2;
+    }
+  }
+}
