--- a/app/frontend/pages/Admin/People/Person/Person.css
+++ b/app/frontend/pages/Admin/People/Person/Person.css
@@ -1,79 +1,3 @@
-.person-form {
-  padding-block: var(--large);
-
-  section {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    gap: var(--large);
-    align-items: flex-start;
-    padding: var(--large) 0;
-
-    > * {
-      grid-column: 2;
-    }
-
-    header {
-      grid-column: 1;
-
-      h3 {
-        margin: 0;
-      }
-
-      p {
-        margin: 0;
-        color: var(--text-subtle);
-      }
-    }
-
-    &:not(:first-child) {
-      border-top: var(--border-width-standard) solid var(--border-subtle);
-    }
-  }
-
-  .labelled {
-    display: flex;
-    flex-direction: column;
-    gap: var(--small);
-    align-items: stretch;
-
-    p {
-      margin: 0;
-    }
-
-    &__hint {
-      color: var(--text-subtle);
-    }
-  }
-
-  .select,
-  input.input {
-    max-width: 24rem;
-  }
-
-  #bio {
-    min-height: 10rem;
-    max-height: 50vh;
-  }
-
-  .profile-picture {
-    grid-column: 2;
-  }
-
-  .permission {
-    display: grid;
-    grid-template-columns: auto 1fr;
-    gap: var(--small);
-
-    &__label {
-      display: contents;
-    }
-
-    &__children {
-      grid-column: 2;
-    }
-  }
-}
-
 .profile-picture {
   --profile-picture-size: 8rem;
 
@@ -110,6 +34,8 @@
   }
 
   &:hover {
+    background-color: var(--background-hover);
+
     img {
       opacity: 0.25;
     }
