--- a/app/frontend/entrypoints/application.css
+++ b/app/frontend/entrypoints/application.css
@@ -11,6 +11,7 @@
   --z-index-popover: 20;
   --z-index-search: 20;
   --z-index-select-content: 30;
+  --ltr: 1;
 
   color-scheme: light dark;
   font-synthesis: none;
@@ -32,6 +33,10 @@
 
 :where([data-theme="dark"]) {
   color-scheme: dark;
+}
+
+:where(:dir(rtl), [dir="rtl"]) {
+  --ltr: -1;
 }
 
 :where(main > * > section) {
