add translation editor

--- a/app/frontend/atoms/Input/Input.css
+++ b/app/frontend/atoms/Input/Input.css
@@ -73,6 +73,7 @@
 
   &::placeholder {
     color: var(--input-placeholder);
+    font-weight: var(--font-weight-normal);
     opacity: var(--placeholder-opacity);
   }
 }
