--- a/app/frontend/helpers/Labelled/Labelled.css
+++ b/app/frontend/helpers/Labelled/Labelled.css
@@ -14,6 +14,10 @@
     color: var(--text-subtle);
   }
 
+  &__error {
+    color: var(--text-error);
+  }
+
   &__field {
     display: flex;
     flex-direction: column;
