--- a/app/frontend/pages/Public/Registration/Registration.css
+++ b/app/frontend/pages/Public/Registration/Registration.css
@@ -614,3 +614,184 @@
     opacity: 1;
   }
 }
+
+.workshop-details {
+  --dialog-border: var(--neutralA6);
+  --dialog-width: 45rem;
+
+  position: fixed;
+  inset: 0;
+  z-index: var(--z-index-dialog);
+  display: grid;
+  place-content: center;
+
+  &__overlay {
+    position: absolute;
+    inset: 0;
+    background: var(--dialog-overlay);
+    opacity: 0;
+    backdrop-filter: blur(0.5rem);
+  }
+
+  &__dialog {
+    position: relative;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    height: 100vh;
+    height: 100dvh;
+    height: 100svh;
+
+    @media (width > 480px) {
+      max-height: calc(100vh - var(--large) * 4);
+    }
+  }
+
+  &__header {
+    position: relative;
+    display: grid;
+    justify-content: flex-start;
+    align-items: flex-end;
+    overflow: hidden;
+    padding: 0;
+
+    &::after {
+      content: '';
+      position: absolute;
+      inset: 0;
+      background: linear-gradient(to bottom, transparent, var(--neutralA11));
+    }
+
+    @media (width > 480px) {
+      border-top-left-radius: var(--border-radius-large);
+      border-top-right-radius: var(--border-radius-large);
+    }
+  }
+
+  &__image {
+    grid-row: 1;
+    grid-column: 1;
+    max-height: 25vh;
+
+    img {
+      display: block;
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  &__title {
+    position: relative;
+    z-index: 1;
+    grid-row: 1;
+    grid-column: 1;
+    margin: 0;
+    padding: var(--medium) var(--large);
+    color: var(--neutral1);
+    font-size: var(--font-size-huge);
+    line-height: var(--line-height-huge);
+    text-shadow: 0 1px 1rem var(--neutralA9);
+  }
+
+  &__close {
+    --button-background: var(--neutralA3);
+    --button-hover-background: var(--neutralA4);
+    --button-active-background: var(--neutralA5);
+    --button-text: var(--neutral2);
+    --button-hover-text: var(--neutral1);
+
+    position: absolute;
+    top: var(--medium);
+    right: var(--medium);
+    z-index: 1;
+  }
+
+  &__body {
+    display: grid;
+    flex: 1;
+    grid-template-rows: auto auto 1fr;
+    grid-template-columns: 1fr;
+    align-items: flex-start;
+    padding: var(--medium) var(--large);
+
+    @media (width > 768px) {
+      grid-template-columns: 1fr 15rem;
+      gap: var(--medium) var(--large);
+    }
+  }
+
+  &__tutors {
+    grid-column: 1 / -1;
+    font-size: var(--font-size-large);
+    line-height: var(--line-height-large);
+  }
+
+  &__places {
+    grid-column: 1 / -1;
+  }
+
+  &__at-a-glance {
+    --icon-size: var(--medium);
+
+    .icon {
+      display: block;
+    }
+
+    dl {
+      display: grid;
+      grid-template-columns: auto 1fr;
+      gap: 0 var(--half);
+      align-items: center;
+      margin: 0;
+      padding: 0;
+      color: var(--text-subtle);
+      font-size: var(--font-size-small);
+      line-height: var(--line-height-large);
+
+      dt, dd {
+        margin: 0;
+        padding: 0;
+      }
+    }
+
+    @media (width > 768px) {
+      position: sticky;
+      top: 24px;
+      grid-row: 3;
+      grid-column: 2;
+      padding-left: var(--medium);
+      border-left: var(--border-width-standard) solid var(--border-subtle);
+    }
+  }
+
+  &__description {
+    grid-column: 1;
+    line-height: var(--line-height-large);
+
+    p {
+      &:first-child {
+        margin-top: 0;
+        font-size: var(--font-size-legible);
+      }
+    }
+  }
+
+  &__bio {
+    color: var(--text-subtle);
+
+    h4 {
+      margin: var(--spacing) 0 0;
+      color: var(--text);
+      font-weight: var(--font-weight-medium);
+      font-size: var(--font-size-medium);
+    }
+  }
+
+  &__footer {
+    @media (width > 768px) {
+      .button[data-variant="primary"] {
+        min-width: calc(15rem - var(--medium))
+      }
+    }
+  }
+}
