--- a/app/frontend/organisms/Card/Card.css
+++ b/app/frontend/organisms/Card/Card.css
@@ -9,6 +9,10 @@
   border-radius: var(--border-radius-large);
   box-shadow: var(--shadow-2), inset 0 0 0 var(--border-width-standard) var(--card-border);
 
+  &[data-loading] {
+    box-shadow: inset 0 0 0 var(--border-width-standard) var(--card-border);
+  }
+
   &__details {
     display: grid;
     gap: var(--tiny);
@@ -45,6 +49,10 @@
     grid-template-columns: 1fr 1fr;
     gap: var(--medium);
     padding: var(--medium);
+
+    .skeleton {
+      max-width: none;
+    }
 
     .button {
       width: auto;
