--- a/app/frontend/atoms/Radio/Radio.css
+++ b/app/frontend/atoms/Radio/Radio.css
@@ -10,8 +10,8 @@
   height: var(--icon-size);
 
   :where(input, .icon) {
-    grid-row: row;
-    grid-column: column;
+    grid-row: 1;
+    grid-column: 1;
     margin: 0;
     padding: 0;
   }
