--- a/app/frontend/pages/Public/Registration/Registration.css
+++ b/app/frontend/pages/Public/Registration/Registration.css
@@ -87,6 +87,7 @@
     display: grid;
     grid-template-columns: 1fr;
     gap: var(--medium);
+    order: 1;
 
     .skeleton {
       flex: 1;
@@ -248,6 +249,7 @@
     &__fields {
       grid-column: 2;
       gap: var(--large);
+      order: unset;
     }
 
     &__aside {
